plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.5'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'fr.alexisbourges'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// LOGS
	implementation("com.github.rozidan:logger-spring-boot:1.1.0")

	// MYSQL
	runtimeOnly('mysql:mysql-connector-java:8.0.30')
	implementation("org.springframework.boot:spring-boot-starter-data-jpa")
	// FLYWAY
	//implementation('org.flywaydb:flyway-core')
	//implementation('org.flywaydb:flyway-mysql')
}

tasks.named('test') {
	useJUnitPlatform()
}
